[package]
name = "storage-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-map = "5.0.6"
zerocopy = "0.6.1"
byteorder = "1.4.3"
structopt = "0.3.26"
bustle = "0.5.0"
num_cpus = "1.14.0"
crossbeam-epoch = "0.9.13"
parking_lot = "0.12.1"
fxhash = "0.2.1"
dashmap = "5.4.0"
hashbrown = "0.13.1"
thousands = "0.2.0"
ahash = "0.8.2"
